; ModuleID = '/home/carl/AnghaBench/HandBrake/gtk/src/extr_chapters.c_chapter_keypress_cb.c'
source_filename = "/home/carl/AnghaBench/HandBrake/gtk/src/extr_chapters.c_chapter_keypress_cb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32*, i32*)* @chapter_keypress_cb to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @chapter_keypress_cb(i32* %0, i32* %1, i32* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32* %2, i32** %6, align 8
  %8 = load i32*, i32** %5, align 8
  %9 = call i32 @ghb_event_get_keyval(i32* %8, i32* %7)
  %10 = load i32*, i32** %4, align 8
  %11 = load i32, i32* %7, align 4
  %12 = load i32*, i32** %6, align 8
  %13 = call i32 @chapter_keypress(i32* %10, i32 %11, i32* %12)
  ret i32 %13
}

declare dso_local i32 @ghb_event_get_keyval(i32*, i32*) #1

declare dso_local i32 @chapter_keypress(i32*, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
